--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
 </head>
 <body>
 
+    <section class="container">
+
+        <div id="timer">
+
+        </div>
+        <div id="numbers">
+    
+        </div>
+
+    </section>
+   
+
 </body>
 </html>
